--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,3 @@
-DB_URL = mongodb+srv://we:4002892233513341@cluster0.sdsh59o.mongodb.net/
+DB_URL_PRD = mongodb+srv://we:4002892233513341@cluster0.sdsh59o.mongodb.net/
+DB_URL_DEV = mongodb://127.0.0.1:27017/
 PORT = 1337
