--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start" : "nodemon src/API.js",
-    "build" : "npm run build"
+    "build" : "node src/API.js"
   },
   "keywords": [],
   "author": "",
